creación del vinculo

--- a/coder-detail.html
+++ b/coder-detail.html
@@ -6,9 +6,26 @@
 	</head>
 	<body>
 		<div class="container">
-		<img src="img/profile-1.png" class="burbuja">
-		<h1>Nombre y Apellido</h1>
-		<p>miau</p>
+		    <img src="img/profile-1.png" class="burbuja">
+		    <h1>Nombre y Apellido</h1>
+		    <p>miau</p>
+		    <h2>Habilidades</h2>
+		    <div class="html">
+		        <p class="barra">HTML</p>
+		    </div>
+		    <div class="css">
+		        <p class="barra">CSS</p>
+		    </div>
+		    <div class="js">
+		        <p class="barra">JavaScript</p>
+		    </div>
+		    <h2>Portafolio</h2>
+		<img src="img/p5.jpg" class="profile">
+		<img src="img/p6.jpg" class="profile">
+		<img src="img/p8.jpg" class="profile">
+		<img src="img/p5.jpg" class="profile">
+		<img src="img/p6.jpg" class="profile">
+		<img src="img/p8.jpg" class="profile">
 		</div>
 	</body>
 </html>
