--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="raya"></div>
 			<h3>Nuestras coders</h3>
 			<div class="linea"></div>
-			<img src="img/profile-1.png" class="profile">
+			<a href="coder-detail.html"><img src="img/profile-1.png" class="profile"></a>
 			<img src="img/profile-2.png" class="profile">
 			<img src="img/profile-3.png" class="profile">
 			<img src="img/profile-4.png" class="profile">
